// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`handles projects outside root folder 1`] = `
"opensearch-dashboards
├── packages
│   ├── bar
│   └── foo
└── ../plugins
    ├── baz
    ├── quux
    └── zorge"
`;

exports[`handles projects with root folder 1`] = `
"opensearch-dashboards
└── packages
    ├── bar
    └── foo"
`;

exports[`handles projects within projects outside root folder 1`] = `
"opensearch-dashboards
├── packages
│   ├── bar
│   └── foo
└── ../opensearch-dashboards-extra/additional_projects (with-additional-projects)
    ├── packages/baz
    └── plugins/quux"
`;
